Slack implementation, streamlit restructure, and minor fixes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-
 # OpenAI LLM Models - https://platform.openai.com/
 OPENAI_API_KEY="..."
 
@@ -8,8 +7,16 @@ FIRECRAWL_API_KEY="..."
 # Agentic VIsion APIs for efficient document extraction - https://va.landing.ai/home
 VISION_AGENT_API_KEY="..."
 
-# LangSmith for traceability / debugging
+# LangSmith for traceability / debugging - https://smith.langchain.com/
 LANGSMITH_TRACING=true
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY="..."
 LANGSMITH_PROJECT="your_project_name"
+
+# Custom domain
+CLOUDFLARE_TOKEN="..."
+LABRAG_BASE_URL="https://labrag.your_domain.com/"
+
+# Slack API 
+SLACK_BOT_TOKEN="xoxb-..."
+SLACK_SIGNING_SECRET="..."
