--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "faiss-cpu>=1.11.0",
     "fastapi>=0.115.12",
     "firecrawl-py>=2.7.1",
+    "httpx>=0.27.0",
     "langchain>=0.3.25",
     "langchain-community>=0.3.24",
     "langchain-openai>=0.3.18",
@@ -36,6 +37,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "requests>=2.32.0",
+    "slack-bolt>=1.20.0",
     "uvicorn>=0.34.2",
 ]
 
