Update model for synthesis & add Slack API link

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,6 @@ LANGSMITH_PROJECT="your_project_name"
 CLOUDFLARE_TOKEN="..."
 LABRAG_BASE_URL="https://labrag.your_domain.com/"
 
-# Slack API 
+# Slack API - https://api.slack.com/
 SLACK_BOT_TOKEN="xoxb-..."
 SLACK_SIGNING_SECRET="..."
